Text shifting fix for RadzenDropDown (#1915)
* Text shifting fix for RadzenDropDown
- Add an input width: 0; configuration for rz-helper-hidden-accessible class

---------

--- a/Radzen.Blazor/themes/components/blazor/_common.scss
+++ b/Radzen.Blazor/themes/components/blazor/_common.scss
@@ -3,6 +3,7 @@
   height: 0;
     
   input {
+    width: 0;
     height: 0;
     padding: 0;
     margin: 0;
